Fix css border-collapse in table context && Fix introduced js error in edit case

--- a/css/image_widget_crop.css
+++ b/css/image_widget_crop.css
@@ -56,6 +56,7 @@
 .crop-wrapper .ratio-list ul li {
   border-bottom: 2px solid #dddcdd;
   transition: all 0.25s ease;
+  border-collapse: separate;
 }
 
 .crop-wrapper .ratio-list ul li .edit-box {
